[gd_scene load_steps=5 format=3 uid="uid://c76patbej3f6w"]

[ext_resource type="PackedScene" uid="uid://bxp0hhpdubjky" path="res://detailed_room_info.tscn" id="1_0yuhc"]
[ext_resource type="Script" path="res://room_chooser.gd" id="1_lm1uq"]
[ext_resource type="Texture2D" uid="uid://cn2ko8kmfs3ch" path="res://Assets/None.png" id="2_m61tk"]
[ext_resource type="Texture2D" uid="uid://u116jsmetni2" path="res://Assets/Backgrounds/Background_Orange.png" id="2_r4mxn"]

[node name="RoomChooser" type="Node2D"]
script = ExtResource("1_lm1uq")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.72549, 0.72549, 0.72549, 1)
texture = ExtResource("2_r4mxn")
centered = false

[node name="Title" type="Label" parent="."]
offset_left = 561.132
offset_top = 29.4749
offset_right = 1361.13
offset_bottom = 78.4749
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 40
text = "Metal Foundry - Level 1"
horizontal_alignment = 1

[node name="DetailedRoomInfo" parent="." instance=ExtResource("1_0yuhc")]
position = Vector2(42.2342, 114.449)

[node name="DetailedRoomInfo2" parent="." instance=ExtResource("1_0yuhc")]
position = Vector2(665.847, 114.449)

[node name="DetailedRoomInfo3" parent="." instance=ExtResource("1_0yuhc")]
position = Vector2(1292.39, 114.449)

[node name="Recruit1" type="Node2D" parent="."]
position = Vector2(153.374, 941.2)

[node name="Button" type="Button" parent="Recruit1"]
offset_left = 228.694
offset_top = 6.57214
offset_right = 398.694
offset_bottom = 96.5721
theme_override_font_sizes/font_size = 24
text = "GO"
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Recruit1"]
position = Vector2(148.056, 62.9763)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_m61tk")

[node name="Label" type="Label" parent="Recruit1"]
offset_left = -81.9832
offset_top = 3.00685
offset_right = 8.01676
offset_bottom = 24.0068
text = "NEW RECRUIT:"
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Recruit1"]
offset_left = -80.4967
offset_top = 31.2434
offset_right = -22.4967
offset_bottom = 52.2434
text = "NONE"
metadata/_edit_use_anchors_ = true

[node name="Recruit2" type="Node2D" parent="."]
position = Vector2(781.276, 941.2)

[node name="Button" type="Button" parent="Recruit2"]
offset_left = 228.694
offset_top = 6.57214
offset_right = 398.694
offset_bottom = 96.5721
theme_override_font_sizes/font_size = 24
text = "GO"
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Recruit2"]
position = Vector2(148.056, 62.9763)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_m61tk")

[node name="Label" type="Label" parent="Recruit2"]
offset_left = -81.9832
offset_top = 3.00685
offset_right = 8.01676
offset_bottom = 24.0068
text = "NEW RECRUIT:"
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Recruit2"]
offset_left = -80.4967
offset_top = 31.2434
offset_right = -22.4967
offset_bottom = 52.2434
text = "NONE"
metadata/_edit_use_anchors_ = true

[node name="Recruit3" type="Node2D" parent="."]
position = Vector2(1405.61, 941.2)

[node name="Button" type="Button" parent="Recruit3"]
offset_left = 228.694
offset_top = 6.57214
offset_right = 398.694
offset_bottom = 96.5721
theme_override_font_sizes/font_size = 24
text = "GO"
metadata/_edit_use_anchors_ = true

[node name="Sprite" type="Sprite2D" parent="Recruit3"]
position = Vector2(148.056, 62.9763)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_m61tk")

[node name="Label" type="Label" parent="Recruit3"]
offset_left = -81.9832
offset_top = 3.00685
offset_right = 8.01676
offset_bottom = 24.0068
text = "NEW RECRUIT:"
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Recruit3"]
offset_left = -80.4967
offset_top = 31.2434
offset_right = -22.4967
offset_bottom = 52.2434
text = "NONE"
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="."]
offset_left = 7.14996
offset_top = 3.93852
offset_right = 177.15
offset_bottom = 93.9385
theme_override_font_sizes/font_size = 20
text = "Back"
